kubernetes/home.vijayakumar.xyz/media/radarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: radarr
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/name: radarr
  name: radarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
        app.kubernetes.io/name: radarr
    spec:
      containers:
        - image: ghcr.io/linuxserver/radarr:5.16.3
          imagePullPolicy: IfNotPresent
          name: radarr
          ports:
            - containerPort: 7878
              name: radarr-tcp
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: radarr
              subPath: radarr-config
            - mountPath: /media
              readOnly: false
              name: nfs
      volumes:
        - name: radarr
          persistentVolumeClaim:
            claimName: radarr-pvc
        - name: nfs
          persistentVolumeClaim:
            claimName: media-share-pvc
