kubernetes/home.vijayakumar.xyz/media/radarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: radarr
  name: radarr
  namespace: media
spec:
  ports:
    - name: radarr-tcp
      port: 7878
      protocol: TCP
      targetPort: 7878
    - name: radarr-udp
      port: 7878
      protocol: UDP
      targetPort: 7878
  selector:
    app: radarr
  type: ClusterIP
  clusterIP: 10.43.157.101
